// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChoiceSliderField > render correctly in multiple mode 1`] = `
<div data-v-9067cb71="" class="vd-form-field">
  <h4 data-v-9067cb71="" class="text-body-1 d-flex align-sm-center mb-2"><span data-v-9067cb71="">Combien de jours par semaine souhaitez-vous travailler ?</span>
    <!--v-if-->
  </h4>
  <!--v-if-->
  <div data-v-9067cb71="" class="vd-range-field" color="red">
    <div class="d-flex flex-wrap max-width-none ma-n3">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background" style="width: 100%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                <!---->Valeur min
              </label><label class="v-label v-field-label" for="input-0">
                <!---->Valeur min
              </label>
              <!----><input size="1" type="number" id="input-0" aria-describedby="input-0-messages" inputmode="numeric" class="v-field__input">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background" style="width: 100%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
                <!---->Valeur max
              </label><label class="v-label v-field-label" for="input-2">
                <!---->Valeur max
              </label>
              <!----><input size="1" type="number" id="input-2" aria-describedby="input-2-messages" ripple="false" inputmode="numeric" class="v-field__input">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-slider v-range-slider v-locale--is-ltr align-center mt-2 mb-6">
      <div class="v-input__prepend">
        <!---->0
        <!---->
      </div>
      <div class="v-input__control">
        <div class="v-slider__container"><input id="input-4_start" name="input-4" tabindex="-1"><input id="input-4_stop" name="input-4" tabindex="-1">
          <div class="v-slider-track" style="--v-slider-track-size: 4px; --v-slider-tick-size: 2px;">
            <div class="v-slider-track__background bg-primary v-slider-track__background--opacity" style="inset-inline-start: 0%; width: 100%;"></div>
            <div class="v-slider-track__fill bg-primary" style="inset-inline-start: 0%; width: 100%;"></div>
            <!---->
          </div>
          <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 0%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="6" aria-valuenow="0" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
            <div class="v-slider-thumb__surface text-primary elevation-2"></div>
            <div class="v-slider-thumb__ripple text-primary"></div>
            <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
              <div class="v-slider-thumb__label-container" style="display: none;">
                <div class="v-slider-thumb__label">
                  <div>0</div>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 100%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="6" aria-valuenow="6" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
            <div class="v-slider-thumb__surface text-primary elevation-2"></div>
            <div class="v-slider-thumb__ripple text-primary"></div>
            <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
              <div class="v-slider-thumb__label-container" style="display: none;">
                <div class="v-slider-thumb__label">
                  <div>6</div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <div class="v-input__append">
        <!---->6
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`ChoiceSliderField > should render correctly 1`] = `
<div data-v-9067cb71="" class="vd-form-field">
  <h4 data-v-9067cb71="" class="text-body-1 d-flex align-sm-center mb-2"><span data-v-9067cb71="">Combien de jours par semaine souhaitez-vous travailler ?</span>
    <!--v-if-->
  </h4>
  <!--v-if-->
  <div data-v-9067cb71="" class="vd-range-field" color="primary">
    <div class="d-flex flex-wrap max-width-none ma-n3">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background" style="width: 100%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                <!---->Valeur min
              </label><label class="v-label v-field-label" for="input-0">
                <!---->Valeur min
              </label>
              <!----><input size="1" type="number" id="input-0" aria-describedby="input-0-messages" inputmode="numeric" class="v-field__input">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-text-field ma-3">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background" style="width: 100%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
                <!---->Valeur max
              </label><label class="v-label v-field-label" for="input-2">
                <!---->Valeur max
              </label>
              <!----><input size="1" type="number" id="input-2" aria-describedby="input-2-messages" ripple="false" inputmode="numeric" class="v-field__input">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-slider v-range-slider v-locale--is-ltr align-center mt-2 mb-6">
      <div class="v-input__prepend">
        <!---->0
        <!---->
      </div>
      <div class="v-input__control">
        <div class="v-slider__container"><input id="input-4_start" name="input-4" tabindex="-1"><input id="input-4_stop" name="input-4" tabindex="-1">
          <div class="v-slider-track" style="--v-slider-track-size: 4px; --v-slider-tick-size: 2px;">
            <div class="v-slider-track__background bg-primary v-slider-track__background--opacity" style="inset-inline-start: 0%; width: 100%;"></div>
            <div class="v-slider-track__fill bg-primary" style="inset-inline-start: 0%; width: 100%;"></div>
            <!---->
          </div>
          <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 0%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="6" aria-valuenow="0" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
            <div class="v-slider-thumb__surface text-primary elevation-2"></div>
            <div class="v-slider-thumb__ripple text-primary"></div>
            <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
              <div class="v-slider-thumb__label-container" style="display: none;">
                <div class="v-slider-thumb__label">
                  <div>0</div>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class="v-slider-thumb v-slider-thumb--focused v-locale--is-ltr" style="--v-slider-thumb-position: 100%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="6" aria-valuenow="6" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-4-messages">
            <div class="v-slider-thumb__surface text-primary elevation-2"></div>
            <div class="v-slider-thumb__ripple text-primary"></div>
            <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
              <div class="v-slider-thumb__label-container" style="display: none;">
                <div class="v-slider-thumb__label">
                  <div>6</div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <div class="v-input__append">
        <!---->6
      </div>
      <!---->
    </div>
  </div>
</div>
`;
